@@ -1,96 +1,78 @@
 package hudson.plugins.favorite.project;
 
-import hudson.matrix.MatrixConfiguration;
-import hudson.model.AbstractProject;
 import hudson.model.Action;
-import hudson.model.Hudson;
+import hudson.model.TopLevelItem;
 import hudson.model.User;
 import hudson.plugins.favorite.Favorites;
 import hudson.plugins.favorite.Messages;
-import jenkins.model.Jenkins;
-import org.acegisecurity.Authentication;
+import org.jenkins.ui.icon.IconSpec;
 
-import edu.umd.cs.findbugs.annotations.NonNull;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
-public class FavoriteProjectAction implements Action {
-    final private AbstractProject<?, ?> project;
+public class FavoriteProjectAction implements Action, IconSpec {
+    final private TopLevelItem topLevelItem;
 
-    public FavoriteProjectAction(AbstractProject project) {
-        this.project = project;
+    public FavoriteProjectAction(TopLevelItem topLevelItem) {
+        this.topLevelItem = topLevelItem;
     }
 
+    public String getItemName() {
+        return topLevelItem.getFullName();
+    }
+
+    /**
+     * Returns the items name
+     * @return item name
+     * @deprecated use {@link #getItemName()}
+     */
+    @Deprecated
     public String getProjectName() {
-        return project.getFullName();
+        return getItemName();
     }
 
+    @Override
     public String getIconFileName() {
-        if (hasPermission() && isSupportedJobType()) {
-            return isFavorite() ? "star-large-gold.svg" : "star-large.svg";
+        return null;
+    }
+
+    @Override
+    public String getIconClassName() {
+        if (hasPermission()) {
+            return isFavorite()
+                    ? "symbol-star plugin-ionicons-api"
+                    : "symbol-star-outline plugin-ionicons-api";
         }
         return null;
     }
 
+    @Override
     public String getDisplayName() {
-        if (hasPermission() && isSupportedJobType()) {
+        if (hasPermission()) {
             return Messages.favoriteColumn();
         }
         return null;
     }
 
+    @Override
     public String getUrlName() {
-        if (hasPermission() && isSupportedJobType()) {
-            try {
-                Jenkins jenkins = Jenkins.get();
-                if (jenkins == null) {
-                    throw new IllegalStateException("Jenkins not started");
-                }
-                return "plugin/favorite/toggleFavorite?job=" + URLEncoder.encode(getProjectName(), "UTF-8") + "&userName=" + URLEncoder.encode(getUserName(), "UTF-8") + "&redirect=true";
-            } catch (UnsupportedEncodingException e) {
-				
-	            return null;
-			}
+        if (hasPermission()) {
+            return "plugin/favorite/toggleFavorite?job=" + URLEncoder.encode(getItemName(), StandardCharsets.UTF_8) + "&redirect=true";
         } else {
             return null;
         }
     }
 
     private boolean hasPermission() {
-        Authentication authentication = Hudson.getAuthentication();
-        String userName = authentication.getName();
-        return !userName.equals( "anonymous" );
-    }
-    
-    private boolean isSupportedJobType() {
-      // MatrixProjects are supported, but the underlying MatrixConfigurations
-      // cannot be referenced like other items because they are using the same
-      // pattern like folders
-        return !( project instanceof MatrixConfiguration );
+        return User.current() != null;
     }
 
-    private String getUserName() {
-        Authentication authentication = getJenkins().getAuthentication();
-        return authentication.getName();
-    }
-
-    private boolean isFavorite() {
-        Authentication authentication = Hudson.getAuthentication();
-        String userName = authentication.getName();
-        if (!userName.equals("anonymous")) {
-            User user = getJenkins().getUser(userName);
-            return user != null && Favorites.isFavorite(user, project);
-        }
-
-        return false;
-    }
-
-    @NonNull
-    Jenkins getJenkins() {
-        Jenkins jenkins = Jenkins.get();
-        if (jenkins == null) {
-            throw new IllegalStateException("Jenkins not started");
-        }
-        return jenkins;
+    /**
+     * Check if associated project is marked as favorite.
+     * @return {@code true} if project is marked as favorite
+     */
+    public boolean isFavorite() {
+        User user = User.current();
+        return user != null && Favorites.isFavorite(user, topLevelItem);
     }
 }
